--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-fileupload": "^1.5.0",
+    "express-validator": "^7.0.1",
     "jimp": "^0.22.12",
     "mongoose": "^8.3.0",
     "uuid": "^9.0.1"
